--- a/tex/sections/project_plan.tex
+++ b/tex/sections/project_plan.tex
@@ -7,9 +7,9 @@ The Bachelor’s Project (Thesis or Final Project) is an extensive project deali
 
 The Bachelor's Project workload is 20 ECTS points. 1 ECTS translates to 27 hours of workload, totaling 540 hours of workload for the Bachelor's Project. Assuming 18 weeks of Bachelor's Project work, total workload/week is 30 hours/week. \newline
 
-During the project period, 2 elective courses with 10 ECTS points in total to fulfil the goal of 30 ECTS workload each semester. Assuming 18 weeks of lectures and assignments, total workload/week is ~16-17 hours/week. \newline
+During the project period, 2 elective courses with 10 ECTS points in total to fulfill the goal of 30 ECTS workload each semester. Assuming 18 weeks of lectures and assignments, total workload/week is ~16-17 hours/week. \newline
 
-Total workload is expected to be ~45-50 hours/week during the semester. To keep track of the project, weekly meetings with supervisor is essential along with project management tools: The ASE-model, SCRUM and Redmine. \newline
+Total workload is expected to be ~45-50 hours/week during the semester. To keep track of the project, weekly SCRUM meetings with supervisor is essential along with project management tools: The ASE-model, SCRUM and Redmine. \newline
 
 \subsection{ASE-model}
 
