--- a/tex/sections/project_plan.tex
+++ b/tex/sections/project_plan.tex
@@ -1,20 +1,25 @@
 \chapter{Project Plan}
-This section is an excerpt of the project plan. The project plan features descriptions of which experiments, technologies etc. to conduct and investigate during the Bachelor's Project. \newline
+This section is an excerpt of the project plan. The project plan features descriptions of which experiments, technologies etc. to conduct, investigate and implement during the Bachelor's Project. \newline
 
 This section contains how the project work will be structured, which methods to be used, etc. \newline
 
+\subsection{The Bachelor's Project}
 The Bachelor’s Project (Thesis or Final Project) is an extensive project dealing with a realistic engineering assignment. The bachelor project should document the students’ ability to work independently to apply engineering methods and theories in solving professional problems and development issues in a specific field. The project constitutes the conclusion of the programme and is placed in the last semester. \newline
 
-The Bachelor's Project workload is 20 ECTS points. 1 ECTS translates to 27 hours of workload, totaling 540 hours of workload for the Bachelor's Project. Assuming 18 weeks of Bachelor's Project work, total workload/week is 30 hours/week. \newline
+The Bachelor's Project workload is \textbf{20 ECTS points}. \textbf{1 ECTS} translates to \textbf{27 hours of workload}, totaling \textbf{540 hours} of workload for the Bachelor's Project. Assuming 18 weeks of Bachelor's Project work, total workload/week is ~30 hours/week. \newline
 
-During the project period, 2 elective courses with 10 ECTS points in total to fulfill the goal of 30 ECTS workload each semester. Assuming 18 weeks of lectures and assignments, total workload/week is ~16-17 hours/week. \newline
+During the project period, 2 elective courses with 10 ECTS points in total to fulfill the goal of 30 ECTS workload each semester. Assuming 18 weeks of lectures and homework assignments and projects, total workload/week is ~16-17 hours/week. \newline
 
-Total workload is expected to be ~45-50 hours/week during the semester. To keep track of the project, weekly SCRUM meetings with supervisor is essential along with project management tools: The ASE-model, SCRUM and Redmine. \newline
+Total workload is therefore expected to be ~45-50 hours/week during the semester. To keep track of the project, weekly SCRUM meetings with supervisor is essential along with project management tools: \\
 
-\subsection{ASE-model}
-
+- SCRUM \\
+- The ASE-model \\
+- Redmine \newline
 
 \subsection{SCRUM}
+
+
+\subsection{ASE-model}
 
 
 \subsection{Redmine}
@@ -24,6 +29,8 @@ Total workload is expected to be ~45-50 hours/week during the semester. To keep 
 
 
 \subsection{Timetable}
+
+
 %\textbf{Objective} \\
 %The objective of the Bachelor’s Project is that students be able to plan and conduct an engineering project in as realistic a form as the study environment allows, preferably in cooperation with companies. \\
 
