--- a/tex/sections/project_plan.tex
+++ b/tex/sections/project_plan.tex
@@ -12,14 +12,21 @@ During the project period, 2 elective courses with 10 ECTS points in total to fu
 
 Total workload is therefore expected to be ~45-50 hours/week during the semester. To keep track of the project, weekly SCRUM meetings with supervisor is essential along with project management tools: \\
 
-- SCRUM \\
 - The ASE-model \\
+- SCRUM \\
 - Redmine \newline
 
-\subsection{SCRUM}
-
-
 \subsection{ASE-model}
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=1]{./pictures/UC1.png}
+\caption{Use-Case diagram of Use-Case 1.}
+\label{fig:UC1.png}
+\end{figure}
+
+\subsection{SCRUM}
+An agile project development management is used in this pro
 
 
 \subsection{Redmine}
