Section Project Plan updated
Section Project Plan updated with figure.

--- a/tex/sections/project_plan.tex
+++ b/tex/sections/project_plan.tex
@@ -20,9 +20,9 @@ Total workload is therefore expected to be ~45-50 hours/week during the semester
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=1]{./pictures/UC1.png}
-\caption{Use-Case diagram of Use-Case 1.}
-\label{fig:UC1.png}
+\includegraphics[scale=0.5]{./pictures/ASEmodel.png}
+\caption{The Aarhus School of Engineering model.}
+\label{fig:ASEmodel.png}
 \end{figure}
 
 \subsection{SCRUM}
