Git guides uploaded
Git guides in Danish and English uploaded.

--- a/tex/sections/project_plan.tex
+++ b/tex/sections/project_plan.tex
@@ -20,14 +20,46 @@ Total workload is therefore expected to be ~45-50 hours/week during the semester
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.5]{./pictures/ASEmodel.png}
-\caption{The Aarhus School of Engineering model.}
+\includegraphics[scale=0.4]{./pictures/ASEmodel.png}
+\caption{The Aarhus School of Engineering model - The ASE-model.}
 \label{fig:ASEmodel.png}
 \end{figure}
 
-\subsection{SCRUM}
-An agile project development management is used in this pro
+The figure above is the ASE-model that engineering students at Aarhus School of Engineering (ASE) was introduced to during their 2nd semester. The ASE-model is a structured model for design and development of hardware- and software-systems. \newline
 
+A project of this magnitude contain and introduce several new technologies, with it many technical and project risks during the project work. Thus, an iterative project procedure is a helpful tool to ensure a clear procedure, as the beginning a new projects is usually difficult, necessitates management and overview to prevent wasting time on unnecessary activities. \newline
+
+The iterative, cross-disciplary model is useful when designing domain, technology, implementation possibilities, etc. Designing a system using the ASE-model reduces possible project risks and enables the option to specify requirements, formulate tests and design complete use-cases early in the project. Combining the ASE-model with an iterative process, the project process is robust from project risks and future modfications. \newline
+
+An iterative process produces functional product parts by completing tasks \textit{piece by piece} (iterations) for each module of the project. Using this method, an early assessment of project success is possible along with an early risk prevention assessment. \newline
+
+Every iteration contains elements from several processes outlined in the ASE-model. Hence, an iteration can contain both design, implementation and test for a minor part of the project. \\
+
+\subsubsection{Iterative development with the ASE-model}
+Even though a team chooses an iterative process, the project still has various phases as shown in Figure ~\ref{fig:ASEmodel.png}. The first iterations' focus is primarily a description of idea and establishing project requirements. The following iterations focuses on system development before moving on to implementation. \\
+The difference between an iterative process and the ASE-model in Figure ~\ref{fig:ASEmodel.png} is that we operate in \textit{parallel} on several types of tasks within a given iteration. This is ongoing to better build, modify and refine the product on the basis of experiences and discoveries from earlier iterations. \newline
+
+For instance, the initial iterations outlines the first and the most important project requirements. When the reuirements are established, the problem domain is investigated: 'How can we implement GUI on a PC laptop?', 'How to measure Total Harmonic Distortion (THD) on audio output?, 'How do we establish USB-connection between GUI and Showman?', etc. \\
+This iteration helps clarifying the thesis statement and allows the team the opportunities to conduct physical tests. \newline
+
+In each iteration, the team works on almost every project area. Documentation is produced during the process and needs to be regularly updated. \\ 
+
+\subsection{SCRUM}
+SCRUM is used to manage the iterative process. The reason is the welldocumented work procedures and team roles. Organizing the project by using SCRUM gives the project a clear overview and keeps the work flow going, even though external activities such as other courses can distract the process - In short, SCRUM makes the project manageable as the teams works toward small, but clear goals. Another reason is the widely accepted use of SCRUM in companies, giving the team necessary introduction and experience in using SCRUM. \newline
+
+The project team defines a framework with a set of \textbf{milestones} with mandatory assignments for each milestone, but gives the team the freedom to reach these milestones. \newline
+
+Even though SCRUM is an integral part of project work at ASE, a detailed analysis and discussion of SCRUM is not within the scope of this document. The following is brief overview of selected elements of SCRUM. \newline
+
+\subsubsection{Milestones}
+The table in Figure ~\ref{fig:milestonespng}below outlines the typical milestones for a project at ASE, weeknumbers relative to semesterstart:
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.8]{./pictures/milestones.png}
+\caption{Example of SCRUM milestones.}
+\label{fig:milestonespng}
+\end{figure}
 
 \subsection{Redmine}
 
