Project Plan finished
Project Plan finished. Project Research ongoing.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,6 +1,7 @@
 %Main Document
 \documentclass[a4paper, 11pt, oneside]{AuProjectHandin} % loads the layout.
 \usepackage{AuPreamble} % loads the Preample
+%\usepackage{hyperref}
 \include{config} % loads configuration file
 \begin{document} % begins the document
 \input{titlepage} % generates titlepage
@@ -30,5 +31,7 @@
 \listoffigures
 
 %\listoftables
-%\bibliography{pathtobibfile.bib}
+
+%\newpage
+%\printbibliography
 \end{document}
