--- a/tex/sections/project_research.tex
+++ b/tex/sections/project_research.tex
@@ -1,5 +1,20 @@
 \chapter{Project Research}
 Undersøgelse af tilsvarende projekter og relevant litteratur.
+This section investigates similar projects and products. Market analysis was conducted in the fall of 2018 to create an overview of the market. 70+ key figures from the Danish and international music business - musicians, recording producers, touring personnel, etc. - were interviewed for an investigation of their consumption patterns, gear run downs, their requests for useful features and the pitfalls of their gear. \newline
+
+The most experienced users are the so-called \textit{backline technicians} (or backliners) that travel/tour with a touring artist or band to set up, tear down and maintain the artists' instruments and gear. In addition to setting up and tearing down the gear, the backline technician often operates electronics that run parts of the show such as backing tracks on some chosen device, MIDI changes, tune guitars/basses during the perfomance - In general to assist in making the artist's performance to run smoothly without unnecessay interruptions. \newline
+
+The most experienced backliners actively explore and research new technologies and products in between tours and/or during their spare time. Some even modify hardware and software to suit their clients' needs. And some backliners - usually on tours with larger production budgets - even design customized systems. \newline
+
+Indeed, touring personnel - whether they are backliners, sound engineers, lighting engineers, etc. - are passionate about their job and they continually explore solutions to make a performance to run even more smoothly. \newline
+
+The common denominator in the interviews is the critical need for stability. Some of the technologies outlined later in this section have trade-offs: Some sacrifice user-friendly GUIs to ensure stability, some trade-offs are loss in audio quality to ensure stability and user-friendly GUI and vise versa. \newline
+
+As several of the available technologies heavily rely on laptops and home-made systems during performances, the incentive to produce Showman is to remove laptops from the perfomance scenario to avoid hiccups during a show. \newline
+
+Following subsections briefly introduce the most popular tehcnoloqies used currently by touring artists and their personnel with a list of their pros and cons. This chapter concludes with an introduction of Showman's desired features. \\
+
+HUSK AT FINDE MATRICEN FRA PITCH!!!
 
 \subsection{Similar Projects}
 Mircea Gabriel Eftemie, medialogy at Aalborg University.
@@ -32,4 +47,7 @@ Mircea Gabriel Eftemie, medialogy at Aalborg University.
 
 
 \subsubsection{Linux Ubuntu Studio}
+
+
+\subsubsection{Literature}
 
