Project Research initialized
Project Research påbegyndt.

--- a/tex/sections/project_research.tex
+++ b/tex/sections/project_research.tex
@@ -17,10 +17,20 @@ Following subsections briefly introduce the most popular tehcnoloqies used curre
 HUSK AT FINDE MATRICEN FRA PITCH!!!
 
 \subsection{Similar Projects}
-Mircea Gabriel Eftemie, medialogy at Aalborg University.
+This subsection investigates similar projects from Scandinavia. \\
+
+\subsubsection{Interactive Performance System}
+Mircea Gabriel Eftemie, Medialogy-alumni from Aalborg University developed a system called '\textbf{Interactive Performance System}', a visual system for concert performances: https://videnskab.dk/kultur-samfund/heavy-metal-pa-universitetet. The project was developed using Open Source technology as his Bachelor's Project with fellow students Thomas Wisbech, Lasse Wingreen and Brenly Bernard. \newline
+
+The purpose of the system was to display theatrical and visual elements during performance without the aid of technical personnel to enhance the performance experience for the audience. The system combined two inputs: A static and dynamic input. The static inputs were prepared beforehand. The static inputs were controlled by an input during the performance partly from a webcam that filmed the audience and the artists and partly from a microphone that recorded and transmitted the audio on stage. \newline
+
+Mircea played guitar in now-defunct Mnemic that utilized the Interactive Performance System. The project was put to rest after Mnemic's dissolution and the project status remains unclear. \\
+
+\subsubsection{The Dark Player}
+Members of Swedish band Darkane developed a system for backing track playback device called '\textbf{The Dark Player}' after expressing dissatifaction with current products available. I am in the process of tracking down the members to investigate their system further. \\
 
 \subsection{Similar Products}
-
+Products similar to Showman exist in many forms: From simple iPods to complex systems, artists can pick and choose any system available in several configurations depending on financial status. However, some proves to be too unreliant, unstable or reliant on other pieces of hardware to function as intended. The subsubsections below outlines the most widely used products. This subsection conludes with Showman's intended features. \\
 
 \subsubsection{Cymatic Audio LP-16}
 
@@ -37,17 +47,23 @@ Mircea Gabriel Eftemie, medialogy at Aalborg University.
 \subsubsection{Logic Pro X}
 
 
-\subsubsection{BlackBeagle}
+\subsubsection{Open Source Products}
 
 
-\subsubsection{Arduino}
+\textbf{BlackBeagle}
 
 
-\subsubsection{Raspberry Pi}
+\textbf{Arduino}
 
 
-\subsubsection{Linux Ubuntu Studio}
+\textbf{Raspberry Pi}
 
 
-\subsubsection{Literature}
+\textbf{Linux Ubuntu Studio}
+
+
+\subsubsection{Showman}
+
+
+\subsection{Literature}
 
