--- a/tex/sections/conclusion.tex
+++ b/tex/sections/conclusion.tex
@@ -1,3 +1,23 @@
 \chapter{Conclusion}
-Konklusion på det indledende arbejde med forprojektet.
+This document has addressed and outlined the following:
 
+\textbf{Project Description} \\
+The Project Description introduces the project and outlines the necessary requirements to implement Showman. The business model and startup company behind Showman, SEMI Sound was established in the last quarter of 2018 during the apprenticeship period at \textit{Navitas Science and Innovation Startup Factory}, as Showman is intended for market release in Summer 2020 if the project succeeds and additional business partners become involved. \newline
+
+The Project Description was handed-in in the last quarter of 2018 on ASE's online platform BlackBoard for approval/go-ahead. Lars G. Johansen (\textbf{LGJ}) gave the project the approval. \\
+
+\textbf{Requirement Specification} \\
+The first drafts for the requirement specifications and the following system descriptions, Use-Cases, functional- and non-functional requirements and MoSCoW-analysis are outlined in this section. While fairly comprehensive, they \textit{are still} drafts and need extensive and thorough revisions during the initial phases of the projects. \\
+
+\textbf{Project Plan} \\
+The first draft for the Project Plan is outlined in this section. The ASE-model is outlined and expected work methods are introduced: Iterative Development with SCRUM, Redmine and a time table. \newline
+
+As with the Requirement Specification, they \textit{are still} drafts and need extensive and thorough revisions during the first sprint and revised continuously. \\
+
+\textbf{Project Research} \\
+This section investigated similar projects and products to create an overview of the market. It is concluded that a product like Showman is necessary for touring artists that demand stability, user-friendly interfaces and wants to avoid products with unnecessary loose external components in order for their backing tracks to run smoothly. \\
+
+\textbf{Project Expectations} \\
+This section addressed the expectations for the project. Applicarion for workplace was filed, expected work load was outlined in the section Project Plan, requested platform(s) was investigated, reflections on project funding was described and ends with announcement of beta testers. \\
+
+It is concluded that with thorough and exhaustive requirement specifications, the project can succeed if organized work ethic is established. Some modifications are subject to change, but the end goal is the same: \textbf{Make touring easier}.
