--- a/tex/sections/project_expectations.tex
+++ b/tex/sections/project_expectations.tex
@@ -8,7 +8,7 @@ Preparation for a tour is commonly referred to as \textit{pre-production}. Durin
 \textbf{Workplace} \\
 After initial project proposal was accepted, an application for project working space was filed to secure an assigned working space at the university campus. As of this document's handin, no working space has been assigned yet as deadline for application handin is January 11th. \\
 
-Meeting with supervisor before initiating work on this document, it was announced that the project will be supervised jointly with 2 other projects who also work independently. Supervisor proposes that the 3 project share workplace to encourage a better work ethic which can be elusive on solo pr
+Meeting with supervisor before initiating work on this document, it was announced that the project will be supervised jointly with 2 other projects who also work independently. Supervisor proposes that the 3 project share workplace to encourage a better work ethic which can be elusive on solo projects. \\
 
 \textbf{Lab work} \\
 Additionally, access to ASE's lab is crucial for the project when implementing and testing design. \\
